// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card test on android renders loading state 1`] = `
<View>
  <View>
    <View
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      <View
        aspectRatio={1.5}
        style={Object {}}
      >
        <View
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <Image
            onLoad={[Function]}
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "height": "100%",
                  "width": "100%",
                },
                undefined,
              ]
            }
          />
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "flex": 1,
                },
                null,
              ]
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <BVLinearGradient
                colors={
                  Array [
                    "#f9f9f9",
                    "#ededed",
                  ]
                }
                end={
                  Object {
                    "x": -0.09302964577578221,
                    "y": 0.11488204504197774,
                  }
                }
                locations={
                  Array [
                    0,
                    1,
                  ]
                }
                start={
                  Object {
                    "x": 1,
                    "y": 0,
                  }
                }
                style={
                  Array [
                    Object {
                      "flex": 1,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Array [
            Object {
              "height": 24,
              "marginBottom": 10,
              "maxWidth": 300,
            },
          ]
        }
      >
        <BVLinearGradient
          colors={
            Array [
              "#f9f9f9",
              "#ededed",
            ]
          }
          end={
            Object {
              "x": -0.09302964577578221,
              "y": 0.11488204504197774,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Array [
              Object {
                "flex": 1,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "height": 10,
              "marginBottom": 10,
            },
          ]
        }
      >
        <BVLinearGradient
          colors={
            Array [
              "#f9f9f9",
              "#ededed",
            ]
          }
          end={
            Object {
              "x": -0.049525179317961854,
              "y": 0.05500328394968961,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Array [
              Object {
                "flex": 1,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "height": 10,
              "marginBottom": 10,
            },
          ]
        }
      >
        <BVLinearGradient
          colors={
            Array [
              "#f9f9f9",
              "#ededed",
            ]
          }
          end={
            Object {
              "x": -0.049525179317961854,
              "y": 0.05500328394968961,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Array [
              Object {
                "flex": 1,
              },
            ]
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "height": 10,
              "marginBottom": 10,
            },
            Object {
              "marginBottom": 0,
            },
          ]
        }
      >
        <BVLinearGradient
          colors={
            Array [
              "#f9f9f9",
              "#ededed",
            ]
          }
          end={
            Object {
              "x": -0.049525179317961854,
              "y": 0.05500328394968961,
            }
          }
          locations={
            Array [
              0,
              1,
            ]
          }
          start={
            Object {
              "x": 1,
              "y": 0,
            }
          }
          style={
            Array [
              Object {
                "flex": 1,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Card test on android renders vertical by default 1`] = `
<View
  onLayout={undefined}
>
  <View
    style={undefined}
  >
    <View
      style={
        Object {
          "marginBottom": 10,
        }
      }
    >
      <View
        aspectRatio={1.5}
        style={Object {}}
      >
        <View
          style={
            Object {
              "height": "100%",
              "width": "100%",
            }
          }
        >
          <Image
            onLoad={[Function]}
            source={
              Object {
                "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Fsundaytimes%2Fprod%2Fweb%2Fbin%2F9242e576-4dfc-11e7-a20e-a11097d3353d.jpg?crop=1463%2C975%2C293%2C12&resize=360",
              }
            }
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "height": "100%",
                  "width": "100%",
                },
                undefined,
              ]
            }
          />
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "flex": 1,
                },
                null,
              ]
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <BVLinearGradient
                colors={
                  Array [
                    "#f9f9f9",
                    "#ededed",
                  ]
                }
                end={
                  Object {
                    "x": -0.09302964577578221,
                    "y": 0.11488204504197774,
                  }
                }
                locations={
                  Array [
                    0,
                    1,
                  ]
                }
                start={
                  Object {
                    "x": 1,
                    "y": 0,
                  }
                }
                style={
                  Array [
                    Object {
                      "flex": 1,
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        style={Object {}}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "letterSpacing": 1,
              "marginBottom": 2,
            }
          }
        >
          CAMILLA LONG
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "400",
              "lineHeight": 22,
              "marginBottom": 8,
            }
          }
        >
          OK, so Putin’s not a lady, but he does have the wildest man‑PMT
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            
            Sally Jones, one of the world’s most wanted terrorists, has been killed in a US drone strike in Syria, it was revealed last night.
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            The former punk
            ...
          </Text>
        </Text>
        <Text
          accessibilityLabel="datePublication"
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 15,
            }
          }
          testID="datePublication"
        >
          Saturday July 01 2017, The Sunday Times
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Card test on android renders without image 1`] = `
<View
  onLayout={undefined}
>
  <View
    style={undefined}
  >
    <View>
      <View
        style={Object {}}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "letterSpacing": 1,
              "marginBottom": 2,
            }
          }
        >
          CAMILLA LONG
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "400",
              "lineHeight": 22,
              "marginBottom": 8,
            }
          }
        >
          OK, so Putin’s not a lady, but he does have the wildest man‑PMT
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            
            Sally Jones, one of the world’s most wanted terrorists, has been killed in a US drone strike in Syria, it was revealed last night.
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            The former punk
            ...
          </Text>
        </Text>
        <Text
          accessibilityLabel="datePublication"
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 15,
            }
          }
          testID="datePublication"
        >
          Saturday July 01 2017, The Sunday Times
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Card test on android renders without image url 1`] = `
<View
  onLayout={undefined}
>
  <View
    style={undefined}
  >
    <View>
      <View
        style={Object {}}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "letterSpacing": 1,
              "marginBottom": 2,
            }
          }
        >
          CAMILLA LONG
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 22,
              "fontWeight": "400",
              "lineHeight": 22,
              "marginBottom": 8,
            }
          }
        >
          OK, so Putin’s not a lady, but he does have the wildest man‑PMT
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 10,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            
            Sally Jones, one of the world’s most wanted terrorists, has been killed in a US drone strike in Syria, it was revealed last night.
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
          >
            The former punk
            ...
          </Text>
        </Text>
        <Text
          accessibilityLabel="datePublication"
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#696969",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 13,
              "lineHeight": 15,
            }
          }
          testID="datePublication"
        >
          Saturday July 01 2017, The Sunday Times
        </Text>
      </View>
    </View>
  </View>
</View>
`;
